--- a/resources/gnome-control-center/a11y-dwellclick.html
+++ b/resources/gnome-control-center/a11y-dwellclick.html
@@ -46,7 +46,7 @@
           <img class="img border" src="setting_accessibility.jpeg" width="700" height="511"><br>
           <img class="img border" src="accessibility_small_typo.jpeg" width="700" height="478">
 
-<div class="discription">3. [마우스 이동 및 누르 아래에서 [누르기 도움]을 클릭합니다. 나타난 화면에서 [자동 누르기] 설정 단추를 오른쪽으로 밀어 켭니다.</div>
+<div class="discription">3. [마우스 이동 및 누르기] 아래에서 [누르기 도움]을 클릭합니다. 나타난 화면에서 [자동 누르기] 설정 단추를 오른쪽으로 밀어 켭니다.</div>
 
           <img class="img border" src="accessibility_mouse_click.jpeg" width="700" height="662"></pre>
 
