--- a/resources/gnome-control-center/background.html
+++ b/resources/gnome-control-center/background.html
@@ -22,7 +22,7 @@
 
      <!--TiTle -->
      <font class="font title" id="title">배경</font><br>
-     <font class="font text"><pre>사용자의 바탕 화면 및 잠금 화면의 배경을 변경할 수 있습니다. 구름 운영 체제에서 기본적으로 제공되는 이미지 또는 사용자가 추가한 사진으로 배경을 변경할 수 있습니다. 이 설정은 바탕 화면 및 잠금 화면 배경에만 적용되므로 메뉴 또는 아이콘을 변경하려면 <a href="theme">테마</a>를 참고하세요.</pre></font>
+     <font class="font text"><pre>사용자의 바탕 화면 및 잠금 화면의 배경을 변경할 수 있습니다. 한컴구름에서 기본적으로 제공되는 이미지 또는 사용자가 추가한 사진으로 배경을 변경할 수 있습니다. 이 설정은 바탕 화면 및 잠금 화면 배경에만 적용되므로 메뉴 또는 아이콘을 변경하려면 <a href="theme">테마</a>를 참고하세요.</pre></font>
 
      <br><br>
 
@@ -44,7 +44,7 @@
 
 4. 배경 화면과 잠금 화면을 이미지/단일 색으로 설정할 수 있습니다. 이미지로 설정하고 싶은 경우 배경 선택에서 [이미지]를 선택 후 원하는 이미지를 선택하거나, [이미지 추가하기]를 눌러 사용자가 원하는 이미지를 추가하여 선택할 수 있습니다. 단일 색으로 설정하고 싶은 경우 [단일 색상]을 선택 후 원하는 색상을 선택하여 변경할 수 있습니다.</div>
 
-구름 바탕 화면의 <a href="../gooroom-help-eog/wall_paper">배경은 [이미지 뷰어] 애플리케이션을 통해서도 변경</a>할 수 있습니다.</pre>
+한컴구름 바탕화면의 <a href="../gooroom-help-eog/wall_paper">배경은 [이미지 뷰어] 애플리케이션을 통해서도 변경</a>할 수 있습니다.</pre>
      </div>
      <br><br>
    </div> <!-- end of div_root-->
