--- a/resources/gnome-control-center/clock-set.html
+++ b/resources/gnome-control-center/clock-set.html
@@ -15,9 +15,9 @@
        <li><img class="img" src="grey.svg">
        <li><a href="prefs-details">자세히 보기</a>
        <li><img class="img" src="grey.svg">
-       <li><a href="clock">날짜 및 시간</a>
+       <li><a href="clock">날짜 및 시각</a>
        <li><img class="img" src="grey.svg">
-       <li><a href="#top">날짜 및 시간 변경</a>
+       <li><a href="#top">날짜 및 시각 변경</a>
      </ul>
     </nav> <!--end of navbar-->
 
@@ -25,7 +25,7 @@
    <!-- for align 30px -->
    <div class="div_root">
      <!--TiTle -->
-     <font class="font title">날짜 및 시간 변경</font><br>
+     <font class="font title">날짜 및 시각 변경</font><br>
      <div class="Rectangle">
        <font class="font text">
          <pre>상단 표시줄에 표시된 날짜와 시간이 올바르지 않거나 형식이 잘못된 경우 다음과 같이 변경할 수 있습니다.
@@ -39,13 +39,13 @@
 - 터미널 창을 열어 'gnome-control-center'를 입력합니다.</pre></div>
 2. 아래쪽에서 [자세히 보기]를 선택합니다.
 
-3. 사이드 바에서 [날짜 및 시간]을 클릭하여 패널을 엽니다.
+3. 사이드 바에서 [날짜 및 시각]을 클릭하여 패널을 엽니다.
 
-4. [자동 날짜 및 시간]으로 설정하고 인터넷에 연결되어 있는 경우 시간과 날짜는 자동으로 업데이트됩니다. 날짜와 시간을 수동으로 업데이트하려면 이 설정을 해제합니다.
+4. [자동 날짜 및 시각]으로 설정하고 인터넷에 연결되어 있는 경우 시간과 날짜는 자동으로 업데이트됩니다. 날짜와 시간을 수동으로 업데이트하려면 이 설정을 해제합니다.
 
-5. [날짜 및 시간]을 클릭한 다음 시간과 날짜를 변경합니다.
+5. [날짜 및 시각]을 클릭한 다음 시간과 날짜를 변경합니다.
 
-6. 시간 형식을 [24시간] 또는 [AM/PM]로 설정하여 시간 표시 방식을 변경할 수 있습니다.</div>
+6. 시간 형식을 [24시간] 또는 [오전/오후]로 설정하여 시간 표시 방식을 변경할 수 있습니다.</div>
 
 <a href="clock-timezone">시간대를 수동으로 설정</a>할 수도 있습니다.</pre>
         </font>
@@ -53,7 +53,7 @@
    </div> <!-- end of div_root-->
    <footer>
      <font class="font ref">추가 정보</font><br>
-     <font class="font text"><a href="clock">날짜 및 시간</a> — <a class="none" href="clock-set ">날짜 및 시간</a>, <a class="none" href="clock-timezone ">시간대</a>를 설정합니다.</font>
+     <font class="font text"><a href="clock">날짜 및 시각</a> — <a class="none" href="clock-set ">날짜 및 시각</a>, <a class="none" href="clock-timezone ">시간대</a>를 설정합니다.</font>
    </footer>
    <footer class="info">
     <a onClick="showMore('name')"
