--- a/resources/gnome-control-center/clock-timezone.html
+++ b/resources/gnome-control-center/clock-timezone.html
@@ -15,7 +15,7 @@
        <li><img class="img" src="grey.svg">
        <li><a href="prefs-details">자세히 보기</a>
        <li><img class="img" src="grey.svg">
-       <li><a href="clock">날짜 및 시간</a>
+       <li><a href="clock">날짜 및 시각</a>
        <li><img class="img" src="grey.svg">
        <li><a href="#top">시간대 변경</a>
      </ul>
@@ -39,7 +39,7 @@
 - 터미널 창을 열어 'gnome-control-center' 명령어를 입력합니다.</pre></div>
 2. 아래쪽에서 [자세히 보기]를 선택합니다.
 
-3. 사이드 바에서 [날짜 및 시간]을 클릭하여 패널을 엽니다.
+3. 사이드 바에서 [날짜 및 시각]을 클릭하여 패널을 엽니다.
 
 4. [자동 표준 시간대]로 설정하고 인터넷에 연결되어 있는 경우 표준 시간대는 자동으로 업데이트됩니다. 시간대를 수동으로 업데이트하려면 이 설정을 해제합니다.
 
@@ -50,7 +50,7 @@
    </div> <!-- end of div_root-->
    <footer>
      <font class="font ref">추가 정보</font><br>
-     <font class="font text"><a href="clock">날짜 및 시간</a> — <a class="none" href="clock-set">날짜 및 시간</a>, <a class="none" href="clock-timezone">시간대</a>를 설정합니다.</font>
+     <font class="font text"><a href="clock">날짜 및 시각</a> — <a class="none" href="clock-set">날짜 및 시각</a>, <a class="none" href="clock-timezone">시간대</a>를 설정합니다.</font>
    </footer>
    <footer class="info">
     <a onClick="showMore('name')"
