--- a/resources/gnome-control-center/clock.html
+++ b/resources/gnome-control-center/clock.html
@@ -15,7 +15,7 @@
        <li><img class="img" src="grey.svg">
        <li><a href="prefs-details">자세히 보기</a>
        <li><img class="img" src="grey.svg">
-       <li><a href="#top">날짜 및 시간</a>
+       <li><a href="#top">날짜 및 시각</a>
      </ul>
     </nav> <!--end of navbar-->
 
@@ -23,13 +23,13 @@
    <!-- for align 30px -->
    <div class="div_root">
      <!--TiTle -->
-     <font class="font title">날짜 및 시간</font><br>
+     <font class="font title">날짜 및 시각</font><br>
      <!--1st-->
      <div class="small_rec left">
        <font class="font text">
-         <pre><a href="clock-set">날짜 및 시간 변경</a>
+         <pre><a href="clock-set">날짜 및 시각 변경</a>
 
-날짜 및 시간 설정을 사용하여 날짜 또는 시간을 변경합니다.</pre>
+날짜 및 시각 설정을 사용하여 날짜 또는 시간을 변경합니다.</pre>
         </font>
      </div>
      <div class="small_rec right">
