--- a/resources/gnome-control-center/keyboard.html
+++ b/resources/gnome-control-center/keyboard.html
@@ -140,7 +140,7 @@
         <font class="font text">
           <pre><a href="keyboard-shortcuts-set">바로 가기 키 설정</a>
 
-[키보드] 설정에서 특정 기능에 대한 바로 가기 키를 정의하거나 변경할 수 있습니다.
+[키보드 바로 가기] 설정에서 특정 기능에 대한 바로 가기 키를 정의하거나 변경할 수 있습니다.
           </pre>
         </font>
 
