--- a/resources/gnome-control-center/look-resolution-orientation.html
+++ b/resources/gnome-control-center/look-resolution-orientation.html
@@ -35,7 +35,7 @@
       <!-- Rectangle-->
       <div class="Rectangle">
         <font class="font text">
-          <pre>사용자의 화면 방향을 설정할 수 있습니다. 사용자의 모니터에 컴퓨터 화면이 제공되는 방향을 의미하며 일반적으로 가로 방향으로 설정되어 있습니다. 구름에서 제공하는 화면 방향 옵션에는 '가로', '세로 오른쪽', '세로 왼쪽', '가로(뒤집힘)'가 있으며 기본적으로 '가로'로 설정되어 있습니다.
+          <pre>사용자의 화면 방향을 설정할 수 있습니다. 사용자의 모니터에 컴퓨터 화면이 제공되는 방향을 의미하며 일반적으로 가로 방향으로 설정되어 있습니다. 한컴구름에서 제공하는 화면 방향 옵션에는 '가로', '세로 오른쪽', '세로 왼쪽', '가로(뒤집힘)'가 있으며 기본적으로 '가로'로 설정되어 있습니다.
 
 다음 단계를 수행하여 사용자 화면 방향을 설정합니다.
 
