--- a/resources/gnome-control-center/look-resolution-refresh-rate.html
+++ b/resources/gnome-control-center/look-resolution-refresh-rate.html
@@ -35,7 +35,7 @@
       <!--Rectangle-->
       <div class="Rectangle">
         <font class="font text">
-          <pre>사용자의 화면 주사율을 설정할 수 있습니다. 화면 주사율은 모니터에 전송되는 화면 이미지를 설정된 주기에 따라 그리거나 업데이트하는 것을 의미합니다. 주사율 숫자가 높을수록 업데이트 주기가 짧아지며, 더 매끄러운 화면을 확인할 수 있습니다. 구름에서 제공하는 화면 주사율 옵션은 사용자의 모니터 사양에 따라 달라지며, 기본 주사율은 60.00Hz입니다.
+          <pre>사용자의 화면 주사율을 설정할 수 있습니다. 화면 주사율은 모니터에 전송되는 화면 이미지를 설정된 주기에 따라 그리거나 업데이트하는 것을 의미합니다. 주사율 숫자가 높을수록 업데이트 주기가 짧아지며, 더 매끄러운 화면을 확인할 수 있습니다. 한컴구름에서 제공하는 화면 주사율 옵션은 사용자의 모니터 사양에 따라 달라지며, 기본 주사율은 60.00Hz입니다.
 
 다음 단계를 수행하여 사용자 화면 주사율을 설정합니다.
 
