--- a/resources/gnome-control-center/media.html
+++ b/resources/gnome-control-center/media.html
@@ -36,7 +36,7 @@
       <!--volume-->
       <div class="small_rec left">
         <font class="font text">
-          <pre><a href="sound-volume">출력 음량 변경</a>
+          <pre><a href="sound-volume">음량 수준</a>
 
 컴퓨터에서 출력되는 소리의 크기를 변경합니다.
           </pre>
@@ -47,7 +47,7 @@
       <!--usemic-->
       <div class="small_rec right">
         <font class="font text">
-          <pre><a href="sound-usemic">입력 장치 설정</a>
+          <pre><a href="sound-usemic">입력</a>
 
 사용자 컴퓨터에 마이크를 연결하고 기본 입력 장치를 설정합니다.
           </pre>
@@ -58,7 +58,7 @@
       <!--usespeakers-->        
       <div class="small_rec left">
         <font class="font text">
-          <pre><a href="sound-usespeakers">출력 장치 설정</a>
+          <pre><a href="sound-usespeakers">출력</a>
 
 사용자 컴퓨터에 스피커 및 헤드폰을 연결하고 기본 출력 장치를 설정합니다.
           </pre>
@@ -69,7 +69,7 @@
       <!--alert-->
       <div class="small_rec right">
         <font class="font text">
-          <pre><a href="sound-alert">경보 및 효과음 설정</a>
+          <pre><a href="sound-alert">경보음</a>
 
 사용자 컴퓨터 효과음 및 경보를 설정합니다.
           </pre>
