--- a/resources/gnome-control-center/net-problem.html
+++ b/resources/gnome-control-center/net-problem.html
@@ -99,8 +99,7 @@
     <footer>
       <font class="font ref">추가 정보</font><br>
       <a href="net">네트워크</a><br>
-      <a href="net-wireless">와이파이</a><br><br>
-      <font class="font ref">참고 항목</font><br>
+      <a href="net-wireless">와이파이</a><br>
     </footer>
     <footer class="info">
       <a onClick="showMore('name')"
