--- a/resources/gnome-control-center/net-wireless-troubleshooting.html
+++ b/resources/gnome-control-center/net-wireless-troubleshooting.html
@@ -30,7 +30,7 @@
      <font class="font text">여기에서는 와이파이 문제에 대한 원인을 찾고 문제를 해결하는 데 도움을 줍니다. 와이파이에 연결할 수 없는 경우 다음 방법을 시도해 보세요.</font><br><br>
 
      <div class="Rectangle">
-       <pre>다음 단계를 수행하여 컴퓨터를 인터넷에 연결합니다.<br>
+       <pre>다음 단계를 수행하여 인터넷 연결을 시도할 수 있습니다.<br>
 <div class="discription">- 초기 검사 수행
 
 - 하드웨어에 대한 정보 수집
@@ -39,9 +39,7 @@
 
 - 무선 라우터에 대한 연결 생성 시도
 
-- 모뎀 및 라우터 확인 수행</div>
-시작하려면 페이지 오른쪽 위에 있는 [다음] 링크를 클릭하세요. 이 페이지 또는 다른 페이지의 링크를 통해 각각의 단계에 대한 자세한 내용을 확인할 수 있습니다.</pre>
-     </div>
+- 모뎀 및 라우터 확인 수행</div></pre></div>
    </div> <!-- end of div_root-->
 
    <footer>
