--- a/resources/gnome-control-center/prefs-details.html
+++ b/resources/gnome-control-center/prefs-details.html
@@ -37,9 +37,9 @@
 
      <div class="small_rec right">
        <font class="font text">
-         <pre><a href="clock">날짜 및 시간</a>
+         <pre><a href="clock">날짜 및 시각</a>
 
-<a class="none" href="clock-set">날짜 및 시간 변경</a>, <a class="none" href="clock-timezone">시간대</a> ... </pre>
+<a class="none" href="clock-set">날짜 및 시각 변경</a>, <a class="none" href="clock-timezone">시간대</a> ... </pre>
         </font>
      </div>
 
