--- a/resources/gnome-control-center/prefs-display.html
+++ b/resources/gnome-control-center/prefs-display.html
@@ -47,7 +47,7 @@
         <font class="font text">
           <pre><a href="look-background">바탕 화면 및 잠금 화면 배경 변경</a>
 
-바탕 화면과 잠금 화면의 이미지를 변경할 수 있습니다. 구름 운영 체제에서 제공하는 기본 이미지 또는 사용자가 저장한 사진으로 변경할 수 있습니다.
+바탕 화면과 잠금 화면의 이미지를 변경할 수 있습니다. 한컴구름에서 제공하는 기본 이미지 또는 사용자가 저장한 사진으로 변경할 수 있습니다.
           </pre>
         </font>
         
