--- a/resources/gnome-control-center/privacy-screen-lock.html
+++ b/resources/gnome-control-center/privacy-screen-lock.html
@@ -37,19 +37,13 @@
 
 다음 단계를 수행하여 자동 화면 잠금을 설정합니다.
 
-<div class="discription">1. 좌측 하단의 [시작] <img class="img" src="rest.png" style="background-color:#252525"> 아이콘을 클릭하고 검색 창에 "설정"을 입력한 후 [설정] 애플리케이션을 실행합니다.</div>
+<div class="discription">1. 좌측 하단의 [시작] <img class="img" src="rest.png" style="background-color:#252525"> 아이콘을 클릭하고 검색 창에 "설정"을 입력한 후 [설정] 애플리케이션을 실행합니다.
 
-          <img class="img border" src="start_default.jpeg" width="700" height="502"><br>
-          <img class="img border" src="start_search_setting.jpeg" width="700" height="502">
+2. [설정] 애플리케이션 사이드 바에서 [개인 정보]를 클릭한 후 [화면 잠금]을 클릭합니다.
 
-<div class="discription">2. [설정] 애플리케이션 사이드 바에서 [개인 정보]를 클릭한 후 [화면 잠금]을 클릭합니다.</div>
+3. 빈 화면 지연시간, 자동 화면 잠금, 자동화면 잠금 지연 시간을 사용할 수 있습니다.</div>
 
-          <img class="img border" src="setting_privacy.jpeg" width="700" height="511"><br>
-          <img class="img border" src="privacy_screen_lock.jpeg" width="700" height="459">
-
-<div class="discription">3. [자동 화면 잠금] 설정 단추를 오른쪽으로 밀어 켭니다. [어둡게 되고 다음 시간이 지나면 화면 잠그기]에서 화면을 잠그는 시간을 설정할 수 있습니다.</div>
-
-잠금 화면에서 안내 메시지를 표시할 수 있습니다. 이 기능을 사용하면 잠금 화면에서 메시지를 확인할 수 있어 편리하지만 다른 사람들도 안내 메시지를 볼 수 있습니다. 안내 메시지를 표시하지 않으려면 [알림 표시] 설정 단추를 왼쪽으로 밀어 끕니다.
+잠금 화면에서 안내 메시지를 표시할 수 있습니다. 이 기능을 사용하면 잠금 화면에서 메시지를 확인할 수 있어 편리하지만 다른 사람들도 안내 메시지를 볼 수 있습니다. 안내 메시지를 표시하지 않으려면 [알림 표시 및 화면 잠그기] 설정 단추를 왼쪽으로 밀어 끕니다.
 
 화면이 잠겼을 때 키보드로 입력하거나 마우스를 움직이면 로그인 화면이 나타납니다. 암호를 입력하면 화면 잠금을 해제할 수 있으며, 암호를 한번 입력하면 해당 암호가 자동으로 입력됩니다.</pre>
 
