--- a/resources/gnome-control-center/sound-usespeakers.html
+++ b/resources/gnome-control-center/sound-usespeakers.html
@@ -19,7 +19,7 @@
         <li><img class="img" src="grey.svg">
         <li><a href="media#basicsound">기본 소리</a>
         <li><img class="img" src="grey.svg">
-        </li><li><a href="#top">출력 장치 설정</a>
+        </li><li><a href="#top">출력</a>
       </ul>
     </nav>
     <!--end of navbar-->
@@ -29,7 +29,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font title" id="title">출력 장치 설정</font><br>
+      <font class="font title" id="title">출력</font><br>
 
       <!--Rectangle-->
       <div class="Rectangle">
@@ -38,21 +38,11 @@
 
 출력 장치는 아래 단계를 진행하여 설정할 수 있습니다.
 
-<div class="discription">1. 좌측 하단의 [시작] <img class="img" src="rest.png" style="background-color:#252525"> 아이콘을 클릭하고 검색 창에 "설정"을 입력한 후 [설정] 애플리케이션을 실행합니다.</div>
+<div class="discription">1. 좌측 하단의 [시작] <img class="img" src="rest.png" style="background-color:#252525"> 아이콘을 클릭하고 검색 창에 "설정"을 입력한 후 [설정] 애플리케이션을 실행합니다.
+ 
+2. [설정] 애플리케이션 사이드 바에서 [소리]를 클릭합니다.
 
-          <img class="img border" src="start_default.jpeg" width="700" height="502"><br>
-          <img class="img border" src="start_search_setting.jpeg" width="700" height="502">
-
-<div class="discription">2. [설정] 애플리케이션 사이드 바에서 [소리]를 클릭합니다.</div>
-
-          <img class="img border" src="setting_sound.jpeg" width="700" height="511"><br>
-          <img class="img border" src="sound_default.jpeg" width="700" height="459">
-
-<div class="discription">3. [출력] 탭을 클릭하여 연결된 출력 장치를 확인하고, 출력 음량, 좌우 밸런스 및 소리 프로파일을 설정합니다.</div>
-
-          <img class="img border" src="sound_speaker.jpeg" width="700" height="741"></pre>
-
-        </font>
+3. [출력] 탭을 클릭하여 연결된 출력 장치를 확인하고, 음량 수준, 좌우 밸런스 및 소리 프로파일을 설정합니다.</div></pre></font>
       </div>  <!-- end of Rectangle-->
 
     </div>  <!-- end of div_root-->
@@ -62,7 +52,7 @@
       <a href="media#basicsound">기본 소리</a><br><br>
 
       <font class="font ref">참고 항목</font><br>
-      <a href="sound-usemic">입력 장치 설정</a></font>
+      <a href="sound-usemic">입력</a></font>
     </footer>
 
     <footer class="info">
