--- a/resources/gnome-control-center/user-add.html
+++ b/resources/gnome-control-center/user-add.html
@@ -45,7 +45,7 @@
 4. 암호를 바르게 입력하면 오른쪽 상단의 단추가 변경됩니다. [사용자 추가(A)...] 단추를 클릭합니다.
 
 5. 새 사용자가 컴퓨터에 대한 <a href="user-admin-explain">관리자 권한</a>을 가지려면 계정 유형에 대한 관리자를 선택합니다.
-관리자는 사용자 추가 및 삭제, 소프트웨어 및 드라이버 설치, 날짜 및 시간 변경 등의 작업을 수행할 수 있습니다.
+관리자는 사용자 추가 및 삭제, 소프트웨어 및 드라이버 설치, 날짜 및 시각 변경 등의 작업을 수행할 수 있습니다.
 
 6. 새 사용자의 전체 이름을 입력합니다. 사용자 이름은 전체 이름에 따라 자동으로 입력됩니다. 추천 사용자 이름이 마음에 들지 않으면 변경할 수 있습니다.
 
