--- a/resources/gooroom-help-gooroom-update/index.html
+++ b/resources/gooroom-help-gooroom-update/index.html
@@ -53,7 +53,7 @@
 
     <div class="small_rec left">
       <font class="font text">
-        <pre><a href='synaptic'>시냅틱 관리자</a></pre>
+        <pre><a href='synaptic'>시냅틱 패키지 관리자</a></pre>
       </font>
     </div>
     
