--- a/resources/gooroom-help-nemo/files-sort.html
+++ b/resources/gooroom-help-nemo/files-sort.html
@@ -97,7 +97,7 @@
 
          <pre><b>수정한 날짜</b></pre>
          <div class="discription">
-           <pre>파일이 마지막으로 변경된 날짜 및 시간을 기준으로 정렬합니다. 기본적으로 오래된 항목부터 최신 항목 순서로 정렬합니다.</pre>
+           <pre>파일이 마지막으로 변경된 날짜 및 시각을 기준으로 정렬합니다. 기본적으로 오래된 항목부터 최신 항목 순서로 정렬합니다.</pre>
          </div><br>
        </font>
      </div>
