--- a/resources/gooroom-help-screen-shot/shortcut.html
+++ b/resources/gooroom-help-screen-shot/shortcut.html
@@ -46,7 +46,7 @@
              </tr>
            </table>
          </div>
-         <pre>캡처한 이미지는 [내 폴더/다운로드]에 저장됩니다.
+         <pre>캡처한 이미지는 [내 폴더/사진]에 저장됩니다.
          
          
 각 기능에 대한 자세한 내용은 <a href="func">스크린샷 캡처</a>를 참조합니다.</pre>
