--- a/resources/gnome-control-center/display-night-light.html
+++ b/resources/gnome-control-center/display-night-light.html
@@ -33,7 +33,7 @@
       <!--Rectangle-->
       <div class="Rectangle">
         <font class="font text">
-          <pre>야간 모드를 설정하여 화면의 색 온도를 조절할 수 있습니다. 컴퓨터의 모니터는 블루라이트를 방출하여 사용자의 눈에 피로감을 유발합니다. 야간 모드는 기존 화면 색을 따뜻한 색으로 물들여 눈의 부담과 피로를 덜어줍니다. 구름 운영 체제에서는 기본적으로 야간 모드가 설정되어 있지 않습니다.
+          <pre>야간 모드를 설정하여 화면의 색 온도를 조절할 수 있습니다. 컴퓨터의 모니터는 블루라이트를 방출하여 사용자의 눈에 피로감을 유발합니다. 야간 모드는 기존 화면 색을 따뜻한 색으로 물들여 눈의 부담과 피로를 덜어줍니다. 한컴구름에서는 기본적으로 야간 모드가 설정되어 있지 않습니다.
 
 다음 단계를 수행하여 야간 모드를 설정합니다.
 
