--- a/resources/gnome-control-center/keyboard-shortcuts-set.html
+++ b/resources/gnome-control-center/keyboard-shortcuts-set.html
@@ -61,7 +61,7 @@
       <!--sub title-->
       <font class="font sub_title">사전 설정된 바로 가기 키</font><br>
       <font class="font text">
-        <pre>구름 운영 체제 설치 시 기본적으로 사용할 수 있는 바로 가기 키는 사전에 설정되며 범주별로 다음과 같이 나누어져 있습니다.</pre></font>
+        <pre>한컴구름 설치 시 기본적으로 사용할 수 있는 바로 가기 키는 사전에 설정되며 범주별로 다음과 같이 나누어져 있습니다.</pre></font>
       <br>
 
       <!-- Rectangle-->
