--- a/resources/gnome-control-center/look-background.html
+++ b/resources/gnome-control-center/look-background.html
@@ -33,7 +33,7 @@
       <!--Rectangle-->
       <div class="Rectangle">
         <font class="font text">
-          <pre>사용자의 바탕 화면 및 잠금 화면의 배경을 변경할 수 있습니다. 구름 운영 체제에서 기본적으로 제공되는 이미지 또는 사용자가 추가한 사진으로 배경을 변경할 수 있습니다. 이 설정은 바탕 화면 및 잠금 화면 배경에만 적용되므로 메뉴 또는 아이콘을 변경하려면 <a href="#top">테마 변경</a>을 참고하세요.
+          <pre>사용자의 바탕 화면 및 잠금 화면의 배경을 변경할 수 있습니다. 한컴구름에서 기본적으로 제공되는 이미지 또는 사용자가 추가한 사진으로 배경을 변경할 수 있습니다. 이 설정은 바탕 화면 및 잠금 화면 배경에만 적용되므로 메뉴 또는 아이콘을 변경하려면 <a href="#top">테마 변경</a>을 참고하세요.
 
 다음 단계를 수행하여 바탕 화면 및 잠금 화면의 배경을 변경합니다.
 
