--- a/resources/gnome-control-center/look-resolution-resolution.html
+++ b/resources/gnome-control-center/look-resolution-resolution.html
@@ -33,7 +33,7 @@
       <!--Rectangle-->
       <div class="Rectangle">
         <font class="font text">
-          <pre>사용자의 화면 해상도를 설정할 수 있습니다. 해상도마다 가로와 세로의 비율이 다릅니다. 와이드 스크린 디스플레이의 경우 16:9의 비율을, 전통적인 디스플레이인 경우 4:3의 비율을 사용합니다. 디스플레이에 적합하지 않은 해상도를 선택하는 경우 상하좌우에 검은색 막대가 추가됩니다. 사용자의 모니터에 따라 적합한 해상도가 다르며 해상도가 높을수록 넓고 선명한 화면을 볼 수 있습니다. 구름 운영 체제에서는 '800x600(4:3)'부터 '1920x1080(16:9)'까지 화면 해상도를 제공합니다.
+          <pre>사용자의 화면 해상도를 설정할 수 있습니다. 해상도마다 가로와 세로의 비율이 다릅니다. 와이드 스크린 디스플레이의 경우 16:9의 비율을, 전통적인 디스플레이인 경우 4:3의 비율을 사용합니다. 디스플레이에 적합하지 않은 해상도를 선택하는 경우 상하좌우에 검은색 막대가 추가됩니다. 사용자의 모니터에 따라 적합한 해상도가 다르며 해상도가 높을수록 넓고 선명한 화면을 볼 수 있습니다. 한컴구름에서는 '800x600(4:3)'부터 '1920x1080(16:9)'까지 화면 해상도를 제공합니다.
 
 다음 단계를 수행하여 사용자 화면 해상도를 설정합니다.
 
