--- a/resources/gnome-control-center/look-resolution-scale.html
+++ b/resources/gnome-control-center/look-resolution-scale.html
@@ -35,7 +35,7 @@
       <!--Rectangle-->
       <div class="Rectangle">
         <font class="font text">
-          <pre>사용자의 화면 크기를 조정할 수 있습니다. 일반적으로 100%로 설정되어 있으며, 수치에 따라 화면이 확대 혹은 축소되어 보여집니다. 구름 운영 체제에서 제공하는 화면 크기 옵션에는 '100%'와 '200%'가 있으며 기본적으로 '100%'로 설정되어 있습니다. 특정 해상도에서는 해당 옵션이 지원되지 않습니다.
+          <pre>사용자의 화면 크기를 조정할 수 있습니다. 일반적으로 100%로 설정되어 있으며, 수치에 따라 화면이 확대 혹은 축소되어 보여집니다. 한컴구름에서 제공하는 화면 크기 옵션에는 '100%'와 '200%'가 있으며 기본적으로 '100%'로 설정되어 있습니다. 특정 해상도에서는 해당 옵션이 지원되지 않습니다.
 
 다음 단계를 수행하여 사용자 화면 크기를 조정합니다.
 
