--- a/resources/gnome-control-center/shell-introduction.html
+++ b/resources/gnome-control-center/shell-introduction.html
@@ -53,7 +53,7 @@
  <div class="div_root">
 
    <font class="font title">구름 패널</font>
-   <font class="font text"><pre>구름 운영 체제에서는 사용자를 방해하는 요소를 최소하하며 작업을 완료할 수 있도록 설계된 사용자 인터페이스를 제공합니다. 처음 로그인하면 빈 바탕 화면과 하단의 패널이 나타납니다.
+   <font class="font text"><pre>한컴구름에서는 사용자를 방해하는 요소를 최소하하며 작업을 완료할 수 있도록 설계된 사용자 인터페이스를 제공합니다. 처음 로그인하면 빈 바탕 화면과 하단의 패널이 나타납니다.
    
 <img class="img border" style="display:block;margin-left:auto; margin-right:auto;" src="shell_under_bar.png">
 
@@ -125,7 +125,7 @@
  <font class="font sub_title">구름 통합 애플릿</font>
  <div class="Rectangle">
    <span class="picture_box_img"><img class="img border" src="gooroom-integration-applet.png" style="height:350px;"></span>
-     <span class="picture_box_txt"><pre>구름 통합 애플릿을 통해 시스템 정보를 확인하고, 조작할 수 있습니다. 사용자, 음량, 보안 상태, 키보드 언어, 날짜 및 시간을 차례로 표시합니다. 이러한 정보는 장치의 상태나 환경 설정에 따라 달라질 수 있습니다.
+     <span class="picture_box_txt"><pre>구름 통합 애플릿을 통해 시스템 정보를 확인하고, 조작할 수 있습니다. 사용자, 음량, 보안 상태, 키보드 언어, 날짜 및 시각을 차례로 표시합니다. 이러한 정보는 장치의 상태나 환경 설정에 따라 달라질 수 있습니다.
         
 애플릿 화면 하단에는 [설정] <img class="img" style="background-color:#252525;" src="setting.svg">, [화면 잠금] <img class="img" style="background-color:#252525;" src="lock_screen.svg">, [전원] <img class="img" style="background-color:#252525;" src="power.svg"> 메뉴를 제공합니다.
 
@@ -141,11 +141,11 @@
 
  <!--for showing desktop-->
  <a name="show-desktop"></a>
- <font class="font sub_title">구름 바탕 화면 표시 애플릿</font>
+ <font class="font sub_title">한컴구름 바탕화면 표시 애플릿</font>
  <div class="Rectangle">
-   <pre>구름 바탕 화면 표시 애플릿을 사용하여 열려 있는 모든 창을 닫고 바탕 화면을 표시할 수 있습니다. 바탕 화면 오른쪽 하단에서 <img class="img" style="background-color:#252525;" src="show-desktop.svg"> 아이콘을 클릭하세요.
+   <pre>한컴구름 바탕화면 표시 애플릿을 사용하여 열려 있는 모든 창을 닫고 바탕 화면을 표시할 수 있습니다. 바탕 화면 오른쪽 하단에서 <img class="img" style="background-color:#252525;" src="show-desktop.svg"> 아이콘을 클릭하세요.
    </pre>
-   <div class="discription"><pre>1. [구름 바탕 화면 표시 애플릿]을 클릭하면 바탕 화면이 표시됩니다.
+   <div class="discription"><pre>1. [한컴구름 바탕화면 표시 애플릿]을 클릭하면 바탕 화면이 표시됩니다.
    
 2. 닫은 창을 모두 다시 보려면 [구름 바탕화면 표시 애플릿]을 다시 한번 누릅니다.</pre></div>
  </div><!--end of gooroom-integration-applet-->
