--- a/resources/gnome-control-center/sound-alert.html
+++ b/resources/gnome-control-center/sound-alert.html
@@ -19,7 +19,7 @@
         <li><img class="img" src="grey.svg">
         <li><a href="media#basicsound">기본 소리</a>
         <li><img class="img" src="grey.svg">
-        </li><li><a href="#top">경보 및 효과음 설정</a>
+        </li><li><a href="#top">경보음</a>
       </ul>
     </nav>
     <!--end of navbar-->
@@ -29,30 +29,20 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font title" id="title">경보 및 효과음 설정</font><br>
+      <font class="font title" id="title">경보음</font><br>
 
       <!--Rectangle-->
       <div class="Rectangle">
         <font class="font text">
           <pre>사용자의 컴퓨터는 특정한 유형의 메시지 혹은 이벤트를 위한 간단한 효과음을 출력할 수 있습니다. 사용자는 각 알림마다 다른 사운드 클립을 선택할 수 있습니다.
 
-경보 및 효과음은 아래 단계를 진행하여 설정할 수 있습니다.
+경보음은 아래 단계를 진행하여 설정할 수 있습니다.
 
-<div class="discription">1. 좌측 하단의 [시작] <img class="img" src="rest.png" style="background-color:#252525"> 아이콘을 클릭하고 검색 창에 "설정"을 입력한 후 [설정] 애플리케이션을 실행합니다.</div>
+<div class="discription">1. 좌측 하단의 [시작] <img class="img" src="rest.png" style="background-color:#252525"> 아이콘을 클릭하고 검색 창에 "설정"을 입력한 후 [설정] 애플리케이션을 실행합니다.
+  
+2. [설정] 애플리케이션 사이드 바에서 [소리]를 클릭합니다.
 
-          <img class="img border" src="start_default.jpeg" width="700" height="502"><br>
-          <img class="img border" src="start_search_setting.jpeg" width="700" height="502">
-
-<div class="discription">2. [설정] 애플리케이션 사이드 바에서 [소리]를 클릭합니다.</div>
-
-          <img class="img border" src="setting_sound.jpeg" width="700" height="511"><br>
-          <img class="img border" src="sound_default.jpeg" width="700" height="459">
-
-<div class="discription">3. [효과음] 탭을 클릭하여 경보 및 효과음을 설정합니다.</div>
-
-          <img class="img border" src="sound_alert.jpeg" width="700" height="459"></pre>
-
-        </font>
+3. [경보음]부분에서 경보 및 효과음을 설정합니다.</div></pre></font>
       </div>  <!-- end of Rectangle-->
 
     </div>  <!-- end of div_root-->
