--- a/resources/gnome-control-center/theme.html
+++ b/resources/gnome-control-center/theme.html
@@ -26,7 +26,7 @@
      <font class="font title">테마</font><br>
      <div class="Rectangle">
        <font class="font text">
-         <pre>구름 운영 체제는 Windows, macOS, Android와 같은 다른 운영 체제를 이미 경험해본 많은 사용자들이 익숙하고 친근하게 사용할 수 있도록 설계되었습니다. 시각적 효과를 높이고 더 나은 사용성을 제공하기 위해 구름 운영 체제에서는 세 가지의 테마를 제공합니다.
+         <pre>한컴구름은 Windows, macOS, Android와 같은 다른 운영 체제를 이미 경험해본 많은 사용자들이 익숙하고 친근하게 사용할 수 있도록 설계되었습니다. 시각적 효과를 높이고 더 나은 사용성을 제공하기 위해 한컴구름에서는 세 가지의 테마를 제공합니다.
 
 <div class="discription">1. 아래의 4가지 방법 중 하나를 수행하여 [설정] 애플리케이션을 실행합니다.
 <div style="margin:30px;"><pre>- [시작] <img class="img" src="launcher.png" style="background-color:#252525;"> 아이콘 클릭 후 [설정] <img class="img" style="width:24px;" src="control-pannel.png"> 애플리케이션을 선택합니다.
@@ -40,7 +40,7 @@
 
 3. [현재 테마]에서 현재 적용되어 있는 테마를 확인합니다.
 
-4. [테마 목록]에서 원하는 테마를 선택하고 자신만의 스타일로 구름 운영 체제를 꾸밉니다.
+4. [테마 목록]에서 원하는 테마를 선택하고 자신만의 스타일로 한컴구름을 꾸밉니다.
 </div></pre>
        </font>
      </div><!--end of Rectangle-->
