--- a/resources/gooroom-help-gedit/time_date.html
+++ b/resources/gooroom-help-gedit/time_date.html
@@ -33,9 +33,9 @@
      <!--TiTle -->
      <font class="font title">날짜/시간 삽입</font><br>
      <div class="Rectangle">
-       <pre>날짜/시간 삽입 플러그인을 사용하면 현재 커서 위치에 날짜 및/또는 시간을 삽입할 수 있습니다. 이 플러그인을 사용하도록 설정하려면 상단 <img src="view-more-symbolic.svg" width="20" style="background-color: gainsboro;">버튼 ▸ 기본설정 ▸ 플러그인 ▸ 날짜/시간 넣기를 선택합니다. 플러그인을 사용하려면 편집 ▸ 날짜 및 시간 삽입을 누릅니다.
+       <pre>날짜/시간 삽입 플러그인을 사용하면 현재 커서 위치에 날짜 및/또는 시간을 삽입할 수 있습니다. 이 플러그인을 사용하도록 설정하려면 상단 <img src="view-more-symbolic.svg" width="20" style="background-color: gainsboro;">버튼 ▸ 기본설정 ▸ 플러그인 ▸ 날짜/시간 넣기를 선택합니다. 플러그인을 사용하려면 편집 ▸ 날짜 및 시각 삽입을 누릅니다.
 
-기본적으로 날짜/시간 삽입 플러그인은 플러그인을 사용할 때마다 원하는 날짜/시간 형식을 선택하라는 메시지를 표시합니다. 기본 날짜 및 시간 형식을 선택하려면 [플러그인] 탭 ▸ [기본 설정(P)] 버튼 ▸ 날짜/시간 넣기에서 설정이 가능합니다.</pre>
+기본적으로 날짜/시간 삽입 플러그인은 플러그인을 사용할 때마다 원하는 날짜/시간 형식을 선택하라는 메시지를 표시합니다. 기본 날짜 및 시각 형식을 선택하려면 [플러그인] 탭 ▸ [기본 설정(P)] 버튼 ▸ 날짜/시간 넣기에서 설정이 가능합니다.</pre>
      </div><!-- end of Rectangle-->
 
    </div>   <!-- end of div_root-->
