--- a/resources/gooroom-help-gnome-mpv/shortcut.html
+++ b/resources/gooroom-help-gnome-mpv/shortcut.html
@@ -11,7 +11,7 @@
         <li><img class="img" src="help.svg">
         <li><a href="index#top">동영상</a>
         <li><img class="img" src="grey.svg">
-        <li><a href="index#additionals">추가 기능</a>
+        <li><a href="index#additionals">추가 기능</a>
         <li><img class="img" src="grey.svg">
         <li><a href="#top">키보드 단축키</a>
       </ul>
@@ -33,7 +33,8 @@
        <font class ="font" style="font-size:14px;">
          <pre>동영상에서 사용할 수 있는 여러 단축키를 소개합니다.
          
-검색어를 입력하여 관련 단축키를 검색할 수 있습니다.</pre></font><img src="shortcut.png" style="width:30%">
+검색어를 입력하여 관련 단축키를 검색할 수 있습니다.</pre></font>
+<center><img src="shortcut.png" style="width:80% border:10px;"></center>
      </div>
    <!-- end of Rectangle-->
 
