--- a/resources/gooroom-help-gooroom-update/synaptic.html
+++ b/resources/gooroom-help-gooroom-update/synaptic.html
@@ -11,7 +11,7 @@
         <li><img class="img" src="help.svg">
         <li><a href="index#top">업데이트 관리자</a>
         <li><img class="img" src="grey.svg">
-        <li><a href="#top">시냅틱 관리자</a>
+        <li><a href="#top">시냅틱 패키지 관리자</a>
       </ul>
     </nav>
     <!--end of navbar-->
