--- a/resources/gooroom-help-screen-shot/effect.html
+++ b/resources/gooroom-help-screen-shot/effect.html
@@ -35,14 +35,16 @@
          <div style="margin:30px;">
            <table class="font text" style="border-spacing:10px;">
              <tr>
-               <td>마우스 포인터 포함(P)</td><td>캡처 화면에 마우스 포인터를 포함합니다.</td>
+               <td>포인터 표시(P)</td><td>캡처 화면에 마우스 포인터를 포함합니다.</td>
              </tr>
+             <!--
              <tr>
                <td>창 테두리 포함(B)</td><td>[현재 창 찍기] 모드에서 테두리까지 포함하여 캡처합니다.</td>
              </tr>
              <tr>
                <td>효과 적용</td><td>캡처한 이미지에 효과를 적용합니다.<br>그림자 넣기, 테두리 및 빈티지 효과를 제공합니다. </td>
              </tr>
+            -->
            </table>
          </div>
        </font>
