--- a/resources/gooroom-help-screen-shot/func.html
+++ b/resources/gooroom-help-screen-shot/func.html
@@ -35,17 +35,17 @@
          <div style="margin:30px;">
            <table class="font text" style="border-spacing:10px;">
              <tr>
-               <td>전체 화면 찍기(R)</td><td>전체 화면을 캡처합니다.</td>
+               <td>전체 화면 찍기(S)</td><td>전체 화면을 캡처합니다.</td>
              </tr>
              <tr>
                <td>현재 창 찍기(W)</td><td>현재 활성화 되어있는 창을 캡쳐합니다. 대화 상자 등과 같이 캡처하려는 창을 선택합니다.</td>
              </tr>
              <tr>
-               <td>잡을 영역 선택(A)</td><td>선택하는 영역을 캡처합니다. 다음 유형을 선택하면<br> 마우스 포인터가 십자 모양 커서로 변합니다. 커서를 드래그하여 사각형을 그립니다.</td>
+               <td>잡을 영역 선택(sL)</td><td>선택하는 영역을 캡처합니다. 다음 유형을 선택하면<br> 마우스 포인터가 십자 모양 커서로 변합니다. 커서를 드래그하여 사각형을 그립니다.</td>
              </tr>
            </table>
 
-           <pre>[다음 시간이 지난 후에 찍기(D)]는 타이머 기능을 제공합니다. 
+           <pre>[지연 시간 (초 단위)(D)]는 타이머 기능을 제공합니다. 
 스크린샷을 찍기 전에 준비가 필요하거나 지연 시간이 필요한 경우에 원하는 시간을 입력하여 사용합니다.</pre>
            </div>
            <br><br>캡처한 이미지는 [사진] 폴더에 저장됩니다.
