--- a/resources/gnome-control-center/index.html
+++ b/resources/gnome-control-center/index.html
@@ -64,7 +64,7 @@
        <font class="font text">
          <pre><a href="theme">테마</a>
          
-구름에서 제공하는 3가지 테마를 이용해 자신만의 스타일로 바탕 화면을 꾸밀 수 있습니다.</pre>
+한컴구름에서 제공하는 테마를 이용해 자신만의 스타일로 바탕 화면을 꾸밀 수 있습니다.</pre>
        </font>
      </div>
 
