[Bug:116] Changed the word: keyboard -> keyrboard shortcut
Change-Id: Ibd2ca52bf5b7260865ec7a38c8a7482a1ba39713

--- a/resources/gooroom-help-screen-shot/func.html
+++ b/resources/gooroom-help-screen-shot/func.html
@@ -41,7 +41,7 @@
                <td>현재 창 찍기(W)</td><td>현재 활성화 되어있는 창을 캡쳐합니다. 대화 상자 등과 같이 캡처하려는 창을 선택합니다.</td>
              </tr>
              <tr>
-               <td>잡을 영역 선택(sL)</td><td>선택하는 영역을 캡처합니다. 다음 유형을 선택하면<br> 마우스 포인터가 십자 모양 커서로 변합니다. 커서를 드래그하여 사각형을 그립니다.</td>
+               <td>잡을 영역 선택(L)</td><td>선택하는 영역을 캡처합니다. 다음 유형을 선택하면<br> 마우스 포인터가 십자 모양 커서로 변합니다. 커서를 드래그하여 사각형을 그립니다.</td>
              </tr>
            </table>
 
