--- a/resources/gnome-control-center/prefs-device.html
+++ b/resources/gnome-control-center/prefs-device.html
@@ -35,6 +35,7 @@
        </font>
      </div>
 
+     <!--
      <div class="list_rec">
        <font class="font text">
          <pre><a href="keyboard">키보드</a>
@@ -42,7 +43,16 @@
 <a class="none" href="a11y">키보드 접근성</a>, <a class="none" href="keyboard-repeat-keys">반복 키 설정</a>, <a class="none" href="keyboard-shortcuts-set">바로 가기 키 설정</a> …</pre>
        </font>
      </div>
+     -->
 
+     <div class="list_rec">
+       <font class="font text">
+         <pre><a href="keyboard-shortcuts-set">키보드 바로 가기</a>
+
+단축키 지정을 할 수 있습니다.
+</a>
+       </font>
+     </div>
      <div class="list_rec right">
        <font class="font text">
          <pre><a href="mouse">마우스 및 터치패드</a>
