[HGOOROOM-800] Fixed gooroom-guide typo
Change-Id: Ice15028bddceb8bf18c5b54b8ccac2a779e34a6b

--- a/resources/gooroom-guide/index.html
+++ b/resources/gooroom-guide/index.html
@@ -36,7 +36,7 @@
          <pre>다음 중 하나를 사용하여 스크린샷을 실행할 수 있습니다.
 
 1. 런처 이용하기</pre>
-         <div class="discription"><pre>1.런처 <img class="img" src="rest.png" style="background-color:#252525"> 버튼을 선택한 다음 작업 표시줄의 검색 상자에 <i>한컴구름 가이드</i>을 입력하고 결과 목록에서 한컴구름 가이드을 선택합니다.
+         <div class="discription"><pre>1.런처 <img class="img" src="rest.png" style="background-color:#252525"> 버튼을 선택한 다음 작업 표시줄의 검색 상자에 <i>한컴구름 가이드</i>를 입력하고 결과 목록에서 한컴구름 가이드를 선택합니다.
 
 2.런처 <img class="img" src="rest.png" style="background-color:#252525"> 버튼을 선택한 다음 오른쪽 프로그램 모음에서 한컴구름 가이드 <img class="img border" src="gooroom-guide.svg" width="30" style="border:solid 1px Gray;"> 아이콘을 선택합니다.</pre>
          </div>
@@ -61,7 +61,7 @@
        <font class="font" style="font-size:14px;">
         <pre>1. 시작하기 페이지</pre>
         <img class="img border" src ="1_intro.jpg">
-        <pre>왼쪽 하단의 <i>시작할 때 실행하기</i> 체크박스를 클릭하면 한컴구름을 시작할 때마다 한컴구름 가이드이 자동 실행 됩니다. 오른쪽 하단의 <i>시작하기</i> 버튼을 클릭하여 한컴구름의 다양한 특성들을 확인 할 수 있습니다.</pre>
+        <pre>왼쪽 하단의 <i>시작할 때 실행하기</i> 체크박스를 클릭하면 한컴구름을 시작할 때마다 한컴구름 가이드가 자동 실행 됩니다. 오른쪽 하단의 <i>시작하기</i> 버튼을 클릭하여 한컴구름의 다양한 특성들을 확인 할 수 있습니다.</pre>
 
         <br><br>
 
