--- a/resources/grac-editors/media.html
+++ b/resources/grac-editors/media.html
@@ -89,7 +89,7 @@
        <font class="font text">
          <pre>매체제어 편집기에서 다음과 같이 토글 버튼을 클릭함으로써 정책을 변경할 수 있습니다. 변경을 마친 후에는 반드시 왼쪽 상단 메뉴의 <i>저장</i>버튼을 클릭하셔야 상태가 저장됩니다.
         
-<center><img class="img" src="grac-editors.png" style="border-radius:10px;></center>
+<center><img class="img" src="grac-editors.png" style="border-radius:10px;"></center>
 
 이벤트 보기를 통해 원하는 작업의 성공여부를 확인할 수 있습니다.
 
