[HGOOROOM-787] Fixed typo:grac-editors
Change-Id: I3e6e712437da71a07bcc492b12bdfc3015685eb8

--- a/resources/grac-editors/media.html
+++ b/resources/grac-editors/media.html
@@ -31,7 +31,7 @@
      <!-- Rectangle-->
      <div class="Rectangle">
        <font class="font text">
-         <pre>매체제어 편집기는 단말의 정책을 편집합니다. GPMS 계정의 경우 우선적으로 GPMS에서 내려준 정책을 준수합니다. 만약 단만 정책을 적용하고 싶다면 왼쪽상단 메뉴 -> 서버정책삭제(U)를 적용하면 됩니다.
+         <pre>매체제어 편집기는 단말의 정책을 편집합니다. GPMS 계정의 경우 우선적으로 GPMS에서 내려준 정책을 준수합니다. 만약 단말 정책을 적용하고 싶다면 왼쪽상단 메뉴 -> 서버정책삭제(U)를 적용하면 됩니다.
 한컴구름에서 사용 허용/비허용 정책을 지원하는 미디어의 종류는 다음과 같습니다.</pre>
          
          <div style="margin-left:30px;">
