--- a/resources/index/index.html
+++ b/resources/index/index.html
@@ -31,9 +31,8 @@
 
      <div class="list_rec">
        <font class="font text">
-         <pre><a href="../gooroom-help-gedit/index">텍스트 편집기</a>
-
-텍스트 편집기를 사용하여 간단한 메모 및 문서를 작서할 수 있습니다.</pre>
+         <a href="../gooroom-help-gedit/index">텍스트 편집기</a><br>
+		 <p style="font-size:12px;">텍스트 편집기를 사용하여 간단한 메모 및 문서를 작성하거나 외부 도구 플러그인 등을 활용하여 편리한 편집 환경을 구성할 수 있습니다.</p>
        </font>
      </div>
 
