--- a/resources/gnome-control-center/net-findip.html
+++ b/resources/gnome-control-center/net-findip.html
@@ -42,7 +42,7 @@ IP 주소는 다음 단계를 통해 확인할 수 있습니다.
 <font class="font sub_title">인터넷 네트워크 IP 주소(내부) 확인</font>
 <div class="discription">1. 좌측 하단의 [시작] <img class="img" src="rest.png" style="background-color:#252525"> 아이콘을 클릭하고 검색 창에 "설정"을 입력한 후 [설정] 애플리케이션을 실행합니다.</div>
 
-          <img class="img border" src="start_default.jpeg" width="700" height="502"><br>
+          <img class="img border" src="start_default.png" width="700" height="502"><br>
           <img class="img border" src="start_search_setting.jpeg" width="700" height="502">
 
 <div class="discription">2-1. 유선 네트워크인 경우 [설정] 애플리케이션 사이드 바에서 [네트워크]를 클릭합니다.</div>
