--- a/resources/gnome-control-center/wacom-mode.html
+++ b/resources/gnome-control-center/wacom-mode.html
@@ -34,7 +34,7 @@
 
 <div class="discription">1. 좌측 하단의 [시작] <img class="img" src="rest.png" style="background-color:#252525"> 아이콘을 클릭하고 검색 창에 "설정"을 입력한 후 [설정] 애플리케이션을 실행합니다.</div>
 
-          <img class="img border" src="start_default.jpeg" width="700" height="502"><br>
+          <img class="img border" src="start_default.png" width="700" height="502"><br>
           <img class="img border" src="start_search_setting.jpeg" width="700" height="502">
 
 <div class="discription">2. [설정] 애플리케이션 사이드 바에서 [장치]를 클릭하고 [디스플레이]를 클릭합니다.</div>
