--- a/resources/gooroom-help-software-center/start.html
+++ b/resources/gooroom-help-software-center/start.html
@@ -30,8 +30,8 @@
 
 <div class="discription">좌측 하단 [시작] <img class="img" src="rest.png" style="background-color:#252525"> 아이콘을 클릭하여 메뉴창을 열고 검색 창에 [소프트웨어]를 입력하여 [소프트웨어 센터] <img class="img" src="market.svg"> 를 실행합니다.</div>
 
-          <img class="img border" src="start_default.jpeg" width="700" height="502"><br>
-          <img class="img border" src="start_search_software_center.jpeg" width="700" height="502">
+          <img class="img border" src="start_default.png" width="700" height="502"><br>
+          <img class="img border" src="start_search_software_center.png" width="700" height="502">
 
 <div class="discription">소프트웨어 홈 화면에서 신규 앱, 추천 앱 등을 확인할 수 있으며, 좌측 메뉴바의 기능들을 사용하여 원하는 앱을 검색, 설치, 삭제할 수 있습니다. 소프트웨어 센터에서 앱의 이름, 아이콘 또는 그림을 클릭하면 해당 앱 상세화면 페이지로 이동합니다. 소프트웨어 센터에서 [뒤로가기] <img class="img" src="back.svg"> 아이콘을 클릭하여 현재 화면으로 넘어오기 이전 페이지로 이동할 수 있습니다.</div>
 
