[HGOOROOM-1004] Deleted font's function
Change-Id: Ifc4420dab186aabe7243082e7f030b9d6a4ba13b

--- a/resources/gnome-control-center/font.html
+++ b/resources/gnome-control-center/font.html
@@ -25,9 +25,9 @@
     <!--TiTle -->
     <font class="font title">글꼴</font>
     <font class = "font text">
-      <pre>인터페이스 텍스트, 문서 텍스트, 고정 텍스트, 이전 방식 창 제목 및 앤티앨리어싱을 변경할 수 있습니다.</pre>
+      <pre>인터페이스 텍스트, 고정폭 텍스트 및 안티 알리아싱을 변경할 수 있습니다.</pre>
     </font>
-      
+
     <!-- small box -->
     <div class="small_rec left">
       <font class="font text">
@@ -40,27 +40,9 @@
 
     <div class="small_rec right">
       <font class="font text">
-        <pre><b>문서 텍스트</b>
-
-문서를 읽기 위해 사용되는 기본 글꼴입니다. 
-        </pre>
-      </font>
-    </div>
-
-    <div class="small_rec left">
-      <font class="font text">
-        <pre><b>고정 텍스트</b>
+        <pre><b>고정폭 텍스트</b>
 
 시스템에서 고정폭 텍스트를 보여줄 때 사용되는 글꼴입니다. 
-        </pre>
-      </font>
-    </div>
-    
-    <div class="small_rec right">
-      <font class="font text">
-        <pre><b>이전 방식 창 제목</b>
-
-창 제목을 표시하는 데 사용되는 글꼴입니다.
         </pre>
       </font>
     </div>
@@ -75,22 +57,9 @@
 
     <div class="small_rec" style="width:100%; height:fit-content;">
       <font class="font text">
-        <pre><b>이전 방식 창 제목</b>
-
-폰트 렌더링에 사용할 힌팅 종류입니다. 
- - 없음: 힌팅이 없을 때 선택합니다.
- - 조금: Y축에 대해서만 맞출 때 선택합니다. 글꼴에 들어있는 고유 힌팅을 무시하고 알고리즘에 따라 힌팅을 만들어냅니다. 기본 값 사용을 추천합니다.
- - 적당히 또는 완전히: 글꼴 형식(예: .ttf, .otf, .pfa/.pfb) 및 설치한 FreeType의 버전에 따라 의미가 달라집니다. 이 값은 보통 X와 Y축 모두에 글리프를 맞춥니다. (예외적으로 .otf의 경우 Y축에만 맞춥니다.)
-이렇게 하면 글꼴의 품질, 형식, FreeType 글꼴 엔진의 상태에 따라서 글자 모양이 일그러지거나 일관성 없게 렌더링될 수도 있습니다.</pre>
-      </font>
-    </div>
-  
-    <!-- small box -->
-    <div class="small_rec" style="width:100%; height:fit-content;">
-      <font class="font text">
         <pre><b>안티 알리아싱</b>
 
-글꼴을 렌더링할 때 사용할 앤티앨리어싱 방법입니다. 사용 값이 'none'이면 앤티앨리어싱 없음, '표준(흑백)'이면 표준 흑백 앤티앨리어싱, '서브 픽셀(LCD 화면용)'이면 서브 픽셀 앤티앨리어싱입니다.</pre>
+글꼴을 렌더링할 때 사용할 안티 알리아싱 방법입니다. 사용 값이 'none'이면 안티 알리아싱 없음, '표준(흑백)'이면 표준 흑백 안티 알리아싱, '서브 픽셀(LCD 화면용)'이면 서브 픽셀 안티 알리아싱입니다.</pre>
       </font>
     </div>
     <!--end of font rendering-->  
