[HGOOROOM-335->1012] Modified gooroom-help-network
Change-Id: I763c03f41820aeb586b38d55895a61b1e588db73

--- a/resources/gooroom-help-network/use-network.html
+++ b/resources/gooroom-help-network/use-network.html
@@ -34,11 +34,11 @@
 
 다음 단계를 수행하여 네트워크 사용 여부를 설정합니다.
 
-<div class="discription">1. 우측 하단의 [네트워크] ( <img class="img" src="lan.svg" style="background-color:#252525">(유선 네트워크), <img class="img" src="wifi-full.svg" style="background-color:#252525">(와이파이), <img class="img" src="lan-no-connection.svg" style="background-color:#252525">(네트워크 미연결)) 아이콘을 클릭하여 네트워크 메뉴를 엽니다. [네트워크 사용] 체크 박스를 해제하여 네트워크 연결을 비활성화 할 수 있습니다.</div>
+<div class="discription">1. 우측 하단의 [네트워크] ( <img class="img" src="lan.svg" style="background-color:#252525;width:25;">(유선 네트워크), <img class="img" src="wifi-full.svg" style="background-color:#252525;width:25;">(와이파이), <img class="img" src="lan-no-connection.svg" style="background-color:#252525;width:25;">(네트워크 미연결)) 아이콘을 클릭하여 네트워크 메뉴를 엽니다. [네트워크 사용] 체크 박스를 해제하여 네트워크 연결을 비활성화 할 수 있습니다.</div>
 
           <img class="img border" src="network-disconnect.jpeg" width="700" height="191">
 
-<div class="discription">2. [네트워크 사용] 체크 박스를 체크하여 네트워크 연결을 활성화 할 수 있습니다. 유선 네트워크 연결이 된 경우 [유선 네트워크 연결] <img class="img" src="lan.svg" style="background-color:#252525"> 아이콘을, 유선 네트워크 연결 없이 와이파이 연결만 된 경우 [와이파이 연결] <img class="img" src="wifi-full.svg" style="background-color:#252525"> 아이콘을 확인할 수 있습니다.</div>
+<div class="discription">2. [네트워크 사용] 체크 박스를 체크하여 네트워크 연결을 활성화 할 수 있습니다. 유선 네트워크 연결이 된 경우 [유선 네트워크 연결] <img class="img" src="lan.svg" style="background-color:#252525;width:25;"> 아이콘을, 유선 네트워크 연결 없이 와이파이 연결만 된 경우 [와이파이 연결] <img class="img" src="wifi-full.svg" style="background-color:#252525;width:25;"> 아이콘을 확인할 수 있습니다.</div>
 
 <B>1) 유선 네트워크</B><br>
           <img class="img border" src="network-wire.jpeg" width="700" height="567"><br>
