--- a/resources/gooroom-help-network/connection-add.html
+++ b/resources/gooroom-help-network/connection-add.html
@@ -36,7 +36,7 @@
 
 다음 단계를 수행하여 네트워크 연결 정보를 설정할 수 있습니다.
 
-<div class="discription">1. 우측 하단의 [네트워크] (<img class="img" src="lan.svg" style="background-color:#252525">(유선 네트워크), <img class="img" src="wifi-full.svg" style="background-color:#252525">(와이파이), <img class="img" src="lan-no-connection.svg" style="background-color:#252525">(네트워크 미연결)) 아이콘을 클릭하여 네트워크 메뉴를 엽니다. [연결 편집] 메뉴를 클릭합니다.</div>
+<div class="discription">1. 우측 하단의 [네트워크] (<img class="img" src="lan.svg" style="background-color:#252525;width:25;">(유선 네트워크), <img class="img" src="wifi-full.svg" style="background-color:#252525;width:25;">(와이파이), <img class="img" src="lan-no-connection.svg" style="background-color:#252525;width:25;">(네트워크 미연결)) 아이콘을 클릭하여 네트워크 메뉴를 엽니다. [연결 편집] 메뉴를 클릭합니다.</div>
 
           <img class="img border" src="network-wifi-edit.jpeg" width="700" height="597"><br>
 
@@ -44,7 +44,7 @@
 
           <img class="img border" src="connection-edit-add.jpeg" width="700" height="499"><br>
 
-<div class="discription">3. 나타난 연결 종류 선택 창에서 스크로 메뉴를 클릭하여 원하는 연결 종류를 선택 후 [만들기] 버튼을 클릭하여 새 네트워크를 생성할 수 있습니다.</div>
+<div class="discription">3. 나타난 연결 종류 선택 창의 드롭다운 목록에서 원하는 연결 종류를 선택 후 [만들기] 버튼을 클릭하여 새 네트워크를 생성할 수 있습니다.</div>
 
           <img class="img border" src="connection-type.jpeg" width="700" height="608"><br>
           <img class="img border" src="connection-type-default.jpeg" width="700" height="292"><br>
