--- a/resources/gooroom-help-network/connection-delete.html
+++ b/resources/gooroom-help-network/connection-delete.html
@@ -36,7 +36,7 @@
 
 다음 단계를 수행하여 네트워크 연결 정보를 삭제할 수 있습니다.
 
-<div class="discription">1. 우측 하단의 [네트워크] (<img class="img" src="lan.svg" style="background-color:#252525">(유선 네트워크), <img class="img" src="wifi-full.svg" style="background-color:#252525">(와이파이), <img class="img" src="lan-no-connection.svg" style="background-color:#252525">(네트워크 미연결)) 아이콘을 클릭하여 네트워크 메뉴를 엽니다. [연결 편집] 메뉴를 클릭합니다.</div>
+<div class="discription">1. 우측 하단의 [네트워크] (<img class="img" src="lan.svg" style="background-color:#252525;width:25;">(유선 네트워크), <img class="img" src="wifi-full.svg" style="background-color:#252525;width:25;">(와이파이), <img class="img" src="lan-no-connection.svg" style="background-color:#252525;width:25;">(네트워크 미연결)) 아이콘을 클릭하여 네트워크 메뉴를 엽니다. [연결 편집] 메뉴를 클릭합니다.</div>
 
           <img class="img border" src="network-wifi-edit.jpeg" width="700" height="597"><br>
 
