--- a/resources/gooroom-help-network/connection-edit.html
+++ b/resources/gooroom-help-network/connection-edit.html
@@ -36,15 +36,16 @@
 
 다음 단계를 수행하여 네트워크 연결 정보를 변경할 수 있습니다.
 
-<div class="discription">1. 우측 하단의 [네트워크] (<img class="img" src="lan.svg" style="background-color:#252525">(유선 네트워크), <img class="img" src="wifi-full.svg" style="background-color:#252525">(와이파이), <img class="img" src="lan-no-connection.svg" style="background-color:#252525">(네트워크 미연결)) 아이콘을 클릭하여 네트워크 메뉴를 엽니다. [연결 편집] 메뉴를 클릭합니다.</div>
+<div class="discription">1. 우측 하단의 [네트워크] (<img class="img" src="lan.svg" style="background-color:#252525;width:25;">(유선 네트워크), <img class="img" src="wifi-full.svg" style="background-color:#252525;width:25;">(와이파이), <img class="img" src="lan-no-connection.svg" style="background-color:#252525;width:25;">(네트워크 미연결)) 아이콘을 클릭하여 네트워크 메뉴를 엽니다. [연결 편집] 메뉴를 클릭합니다.</div>
 
           <img class="img border" src="network-wifi-edit.jpeg" width="700" height="597"><br>
 
-<div class="discription">2. 나타난 네트워크 연결 창에서 현재 연결된 네트워크 종류를 확인할 수 있습니다. 기존 네트워크 편집은 편집을 원하는 네트워크를 선택 후 좌측 하단 [편집] <img class="img" src="edit.svg" style="filter:invert(100%)"> 아이콘을 클릭하여 할 수 있습니다. </div>
+<div class="discription">2. 나타난 네트워크 연결 창에서 현재 연결된 네트워크 종류를 확인할 수 있습니다. 기존 네트워크 편집은 편집을 원하는 네트워크를 선택 후 좌측 하단 [편집] <img class="img" src="edit.png" style="width:25;"> 아이콘을 클릭하여 할 수 있습니다. </div>
 
           <img class="img border" src="connection-edit-edit.jpeg" width="700" height="499"><br>
 
-<div class="discription">3. 나타난 네트워크 연결 편집 창에서 이더넷, IPv4 설정 탭등을 클릭하여 장치 ID, IP주소 등을 설정할 수 있습니다. 네트워크 연결 정보 변경 후 [저장] 버튼을 클릭하여 네트워크 정보를 변경할 수 있습니다.</div>
+<div class="discription">3. 나타난 네트워크 연결 편집 창에서 이더넷, IPv4 설정 탭등을 클릭하여 장치 ID, IP주소 등을 설정할 수 있습니다. 네트워크 연결 정보 변경 후 [저장] 버튼을 클릭하여 네트워크 정보를 변경
+할 수 있습니다.</div>
 
           <img class="img border" src="connection-edit.jpeg" width="700" height="635"></pre>
         </font>
