--- a/resources/gooroom-help-network/connection-info.html
+++ b/resources/gooroom-help-network/connection-info.html
@@ -34,7 +34,7 @@
 
 다음 단계를 수행하여 네트워크 연결 정보를 확인합니다.
 
-<div class="discription">1. 우측 하단의 [네트워크] (<img class="img" src="lan.svg" style="background-color:#252525">(유선 네트워크), <img class="img" src="wifi-full.svg" style="background-color:#252525">(와이파이), <img class="img" src="lan-no-connection.svg" style="background-color:#252525">(네트워크 미연결)) 아이콘을 클릭하여 네트워크 메뉴를 엽니다. 네트워크가 연결된 경우 [연결 정보] 메뉴가 활성화됩니다.</div>
+<div class="discription">1. 우측 하단의 [네트워크] (<img class="img" src="lan.svg" style="background-color:#252525;width:25;">(유선 네트워크), <img class="img" src="wifi-full.svg" style="background-color:#252525;width:25;">(와이파이), <img class="img" src="lan-no-connection.svg" style="background-color:#252525;width:25;">(네트워크 미연결)) 아이콘을 클릭하여 네트워크 메뉴를 엽니다. 네트워크가 연결된 경우 [연결 정보] 메뉴가 활성화됩니다.</div>
 
 <B> 네트워크 미연결</B><br>
           <img class="img border" src="network-disconnect-connection.jpeg" width="700" height="191"><br>
@@ -45,10 +45,10 @@
 <div class="discription">2. [연결 정보] 메뉴를 클릭하여 연결 정보창을 확인합니다. 인터페이스, 하드웨어 주소, 드라이버, 속도, 보안, ip주소 등의 정보를 확인할 수 있습니다.</div>
 
 <B>1) 유선 네트워크</B><br>
-          <img class="img border" src="network-wire-connection-info.jpeg" width="700" height="599"><br>
+          <img class="img border" src="network-wire-connection-info.jpeg" width="700"><br>
 
 <B>2) 와이파이</B><br>
-          <img class="img border" src="network-wifi-connection-info.jpeg" width="700" height="597"><br>
+          <img class="img border" src="network-wifi-connection-info.jpeg" width="700"><br>
 
 <div class="discription">3. 우측 상단의 종료 또는 우측 하단의 [종료] 버튼을 눌러 연결 정보창을 닫을 수 있습니다.</div></pre>
         </font>
