--- a/resources/gooroom-help-network/use-wifi.html
+++ b/resources/gooroom-help-network/use-wifi.html
@@ -34,7 +34,7 @@
 
 다음 단계를 수행하여 와이파이 사용 여부를 설정합니다.
 
-<div class="discription">1. 우측 하단의 [네트워크] (<img class="img" src="lan.svg" style="background-color:#252525">(유선 네트워크), <img class="img" src="wifi-full.svg" style="background-color:#252525">(와이파이), <img class="img" src="lan-no-connection.svg" style="background-color:#252525">(네트워크 미연결)) 아이콘을 클릭하여 네트워크 메뉴를 엽니다. 와이파이를 사용할 수 없는 환경인 경우 [와이파이 사용] 체크 박스를 확인할 수 없습니다.</div>
+<div class="discription">1. 우측 하단의 [네트워크] (<img class="img" src="lan.svg" style="background-color:#252525;width:25;">(유선 네트워크), <img class="img" src="wifi-full.svg" style="background-color:#252525;width:25;">(와이파이), <img class="img" src="lan-no-connection.svg" style="background-color:#252525;width:25;">(네트워크 미연결)) 아이콘을 클릭하여 네트워크 메뉴를 엽니다. 와이파이를 사용할 수 없는 환경인 경우 [와이파이 사용] 체크 박스를 확인할 수 없습니다.</div>
 
 <B>와이파이 사용 불가</B><br>
           <img class="img border" src="network-without-wifi.jpeg" width="700" height="258"><br>
