[HGOOROOM-1015] Removed gedit plugins
Change-Id: Ifcf375b21146bd7fd412b2fcc2107a322ee509a5

--- a/resources/gooroom-help-gedit/index.html
+++ b/resources/gooroom-help-gedit/index.html
@@ -168,13 +168,11 @@
        </font>
      </div><!--end of configure gedit-->
 
-     <!--plugins-->
+     <!--plugins
      <br><br><br>
      
-     <!-- sub title-->
      <a name="print"></a>
      <font class= "font sub_title">플러그인</font><br>
-     <!-- small box -->
      <div class="small_rec" style="width:100%;">
        <font class="font text">
          <pre><a href="plugins">플러그인</a>
@@ -182,9 +180,8 @@
 텍스트 편집기의 플러그인을 구성하고 사용합니다.
 플러그인을 사용하여 텍스트 편집기의 작동 방식을 사용자 지정합니다.</pre>
        </font>
-     </div><!--end of plugins-->
+     </div>-->
 
-     <!--plugins-->
      <br><br><br>
      
      <!-- sub title-->
