[HGOOROOM-1399] Modified the index.html of gnome-control-center to synchronize with the document
Change-Id: I321f8c0806a1b1de500047e0ebd3a4284b430f7e

--- a/resources/gnome-control-center/index.html
+++ b/resources/gnome-control-center/index.html
@@ -106,7 +106,7 @@
        <font class="font text">
          <pre><a href="media">소리</a>
 
-화면 절전 및 시스템 전원과 관련된 기능을 설정할 수 있습니다.</pre>
+스피커, 마이크, 효과음, 실행중인 프로그램 음량 등을 조절할 수 있습니다.</pre>
        </font>
      </div>
 
