Fixed HGOOROOM-1408 & HGOOROOM-1411
[HGOOROOM-1408] Added a description of WEP and WPA encryption
[HGOOROOM-1411] Changed the term: 중복 <보안 상태> 알림 허용 →  <보안 상태> 중복 알림 허용

Change-Id: I200822fc2c0fe0be875898efb8cfeea100ae6eef

--- a/resources/gnome-control-center/net-wireless.html
+++ b/resources/gnome-control-center/net-wireless.html
@@ -79,7 +79,7 @@
        <font class="font text">
          <pre><a href="net-wireless-wepwpa">WEP와 WPA 암호화</a>
 
-와이파이가 끊기는 원인에 대한 설명 및 해결방안을 제시합니다.</pre>
+와이파이 연결을 보호하기 위한 암호화 방식을 설정합니다.</pre>
        </font>
      </div><!--end of 2nd-->
 
