--- a/resources/gooroom-security-status-tool/policy.html
+++ b/resources/gooroom-security-status-tool/policy.html
@@ -74,7 +74,7 @@
        </font>
      </div>
 <br><br>
-<font class="font sub_titleㅈ">알림</font><br>
+<font class="font sub_title">알림</font><br>
      <!-- Rectangle-->
      <div class="Rectangle">
        <font class="font text">
@@ -100,8 +100,9 @@
         <pre>알림창 표시 조건은 위의 기술 3가지(1. 신뢰부팅 / 2.실행파일 검증 / 3.운영체제 보호)과 <a href="../grac-editors/index">매체제어</a> 기술을 이용하여 로그를 기록합니다. 각 영역의 체크박스는 로그를 기록하는 범위를 나타내며, 구름 시스템 보안 상태 자세히 보기 프로그램을 이용해 수정할 수는 없습니다.
 
 
-<B>중복 로그인 알림 허용</B>
-원격 계정으로 중복 로그인을 한 경우 알림창을 띄울지 설정할 수 있습니다.</pre>
+<B><보안 상태> 중복 알림 허용</B>
+
+보안 상태 위험에 대한 알림이 여러 건일 때, 중복 알림을 허용하거나 1회만 알림을 허용하도록 설정할 수 있습니다.</pre>
        </font>
      </div>
    </div>   <!-- end of div_root-->
