[HGOOROOM-786]Change the therm:앱정보 →  앱 상세화면
Change-Id: I3b0f61d746d01d8422de4f2988044b64bc19163c

--- a/resources/gooroom-help-software-center/update.html
+++ b/resources/gooroom-help-software-center/update.html
@@ -42,7 +42,7 @@
       <font class="font ref">참고 항목</font><br>
       <a href="install">설치</a><br>
       <a href="delete">삭제</a><br>
-      <a href="app_information">앱 정보</a></font>
+      <a href="app_information">앱 상세화면</a></font>
     </footer>
     <footer class="info">
       <a onclick="showMore('name')"
