--- a/resources/gooroom-help-software-center/delete.html
+++ b/resources/gooroom-help-software-center/delete.html
@@ -38,7 +38,7 @@
       <font class="font ref">참고 항목</font><br>
       <a href="install">설치</a><br>
       <a href="update">업데이트</a><br>
-      <a href="app_information">앱 정보</a></font>
+      <a href="app_information">앱 상세화면</a></font>
     </footer>
     <footer class="info">
       <a onclick="showMore('name')"
