--- a/resources/gooroom-help-software-center/install.html
+++ b/resources/gooroom-help-software-center/install.html
@@ -44,7 +44,7 @@
       <font class="font ref">참고 항목</font><br>
       <a href="update">업데이트</a><br>
       <a href="delete">삭제</a><br>
-      <a href="app_information">앱 정보</a></font>
+      <a href="app_information">앱 상세화면</a></font>
     </footer>
     <footer class="info">
       <a onclick="showMore('name')"
