[HGOOROOM-1745] Change the term: 측면 패널 → 가장자리 창
Change-Id: I4449289a586e7181594593a5953913994ce24483

--- a/resources/gooroom-help-gedit/file_browser_panel.html
+++ b/resources/gooroom-help-gedit/file_browser_panel.html
@@ -32,15 +32,15 @@
 
      <!--TiTle -->
      <font class="font title">파일 브라우저</font><br>
-     <font class="font text">파일 브라우저 플러그인을 사용하면 작업에 도움이 될 수 있습니다. 이 플러그인은 측면 패널에 파일 브라우저를 추가하므로 자주 사용하는 파일에 쉽게 액세스할 수 있습니다.
+     <font class="font text">파일 브라우저 플러그인을 사용하면 작업에 도움이 될 수 있습니다. 이 플러그인은 가장자리 창에 파일 브라우저를 추가하므로 자주 사용하는 파일에 쉽게 액세스할 수 있습니다.
 
-메뉴 ▸ 기본설정 ▸ 플러그인 ▸ 파일 찾아보기 창을 선택하여 측면 패널을 활성화할 수 있습니다.</font><br>
+메뉴 ▸ 기본설정 ▸ 플러그인 ▸ 파일 찾아보기 창을 선택하여 가장자리 창을 활성화할 수 있습니다.</font><br>
 
      <br>
 
-     <font class="font sub_title">측면 패널에서 파일 열기</font><br>
+     <font class="font sub_title">가장자리 창에서 파일 열기</font><br>
        <div class="Rectangle">
-         <pre>측면 패널에서 파일을 열려면 먼저 보기 ▸ 가장자리 창을 선택(또는 F9 누르기)하여 측면 패널을 연 다음 창의 맨 위에 있는 드롭다운에서 파일 브라우저를 선택합니다.
+         <pre>가장자리 창에서 파일을 열려면 먼저 보기 ▸ 가장자리 창을 선택(또는 F9 누르기)하여 가장자리 창을 연 다음 창의 맨 위에 있는 드롭다운에서 파일 브라우저를 선택합니다.
 
 그러면 가장자리 창의 파일 브라우저 모드가 활성화됩니다. 그런 다음 창 상단에 있는 탐색 단추를 사용하여 원하는 파일을 찾아 열 수 있습니다.</pre>
 
