--- a/resources/gooroom-help-gedit/plugins.html
+++ b/resources/gooroom-help-gedit/plugins.html
@@ -97,7 +97,7 @@
        <font class="font text">
          <pre><a href="file_browser_panel">파일 브라우저 패널</a>
 
-측면 패널을 사용하여 파일을 찾아 엽니다.</pre>
+가장자리 창을 사용하여 파일을 찾아 엽니다.</pre>
        </font>
      </div>
 
