--- a/resources/gooroom-help-gedit/syntax_highlighting.html
+++ b/resources/gooroom-help-gedit/syntax_highlighting.html
@@ -24,7 +24,7 @@
    <!-- for align 30px -->
    <div class="div_root">
      <font class="font title">구문 강조 표시 설정</font><br>
-     <font class="font sub_title">측면 패널에서 파일 열기</font>
+     <font class="font sub_title">가장자리 창에서 파일 열기</font>
      <!-- Rectangle-->
      <div class="Rectangle">
        <font class="font text">
